# vimix

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/web/: .env.example  components.json  package.json
apps/web/src/: app.css
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src/lib/: api.ts  processor-categories.ts  processor-icons.ts  utils.ts
apps/web/src/lib/ai/: client.ts  (+3 more)
apps/web/src/routes/: +layout.svelte  +page.svelte
docs/: adding-processors.md  api.md  architecture.md  deployment.md  desktop-app.md
scripts/: build-sidecar.sh  bump-version.sh  download-desktop-binaries.sh
services/mcp/: register.py  server.py
services/processor/: requirements.txt  vimix-processor.spec
services/processor/app/: main.py
services/processor/app/processors/: audio_convert.py  audio_extract.py  audio_trim.py  base.py  image_bg_remove.py  image_compress.py  image_convert.py  image_to_pdf.py  image_watermark.py  pdf_compress.py  pdf_extract_text.py  pdf_merge.py  pdf_page_numbers.py  pdf_protect.py  pdf_rotate.py  pdf_split.py  pdf_to_image.py  pdf_unlock.py  pdf_watermark.py  registry.py  video_bg_remove.py  video_compress.py  video_convert.py  video_thumbnail.py  video_to_gif.py  video_trim.py
(+43 files in other folders)
