[package]
name = "vimix"
version = "0.2.1"
description = "Local AI-powered media processing toolkit"
authors = ["Jesus Cuevas"]
license = "MIT"
edition = "2021"

[lib]
name = "vimix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
